# apertium-hun

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  README  README.markdown  apertium-hun.hun.dix  apertium-hun.hun.rlx  apertium-hun.pc.in  configure.ac  modes.xml
dev/: huwiki.freqs.25plus  paradigms.copypasta  unimorph-hits.bash  unimorph-stuff.bash  unimorph-test.yaml.head  unimorph2apesyaml.py
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
texts/: huwiki.fagylalt.text  rasskaz.hun.txt
